# Edgent-ESP-IDF

./: CMakeLists.txt  Kconfig  LICENSE  README.md  idf_component.yml
examples/basic/main/: idf_component.yml  main.cpp
include/: blynk_edgent.h
src/: blynk_api.c  blynk_config.c  blynk_config.h
